导航栏样式初步完成，配色还没有搞

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,10 +1,12 @@
 <!-- Navigation -->
 <nav class="head-navigation">
-    <div class="container-fluid">
+    <div class="nav-container">
         <div class="nav-title">
-            <a class="nav-title brand" href="{{ site.baseurl }}/">{{ site.title }}</a>
+            <a class="nav-brand" href="{{ site.baseurl }}/">
+                <span class="nav-brand-title">{{ site.title }}</span>
+            </a>
         </div>
-        <div id="nav-directory">
+        <div class="nav-directory">
             <ul class="nav-bar-right">
                 {% for item in site.data.directory %}
                 <li>
