--- a/css/hxf-custom.css
+++ b/css/hxf-custom.css
@@ -2,7 +2,12 @@
     width: 100%;
     height: 60px;
     background: white;
-    border-bottom: 1px solid grey;
+    border-bottom: 1px solid #ededed;
+    padding: 0 50px;
+}
+
+a:hover {
+    text-decoration: none;
 }
 
 .nav-title,
@@ -25,17 +30,16 @@
     display: inline;
 }
 
-.nav-brand {
-
-}
-
 .nav-brand-title {
     color: black;
-    text-decoration: none;
 }
 
-.nav-brand:hover,
+.nav-item-name {
+    color: #777777;
+    margin: 0 10px;
+}
+
+.nav-item-name:hover,
 .nav-brand-title:hover {
     color: green;
-    text-decoration: none;
 }
