--- a/css/hxf-custom.css
+++ b/css/hxf-custom.css
@@ -1,18 +1,17 @@
+/* 顶部导航栏 */
 .head-navigation {
     width: 100%;
     height: 60px;
     background: white;
     border-bottom: 1px solid #ededed;
     padding: 0 50px;
-}
-
-a:hover {
-    text-decoration: none;
+    position: fixed;
+    z-index: 99;
 }
 
 .nav-title,
 .nav-directory {
-    display: inline;
+    display: inline-block;
     line-height: 60px;
     text-align: center;
 }
@@ -42,4 +41,41 @@ a:hover {
 .nav-item-name:hover,
 .nav-brand-title:hover {
     color: green;
+}
+
+/* 下方内容 */
+.block-left,
+.block-right {
+    height: 100%;
+    top: 60px;
+}
+.block-left {
+    width: 25%;
+    float: left;
+    background: white;
+    position: fixed;
+}
+
+.block-right {
+    width: 75%;
+    float: right;
+    position: relative;
+    background: white;
+    overflow: auto;
+}
+
+.block-left > .content {
+    margin: 35px;
+    border-radius: 15px;
+    border: 1px solid #e5e5e5;
+    height: 80%;
+    background: #e5e5e5;
+    text-align: center;
+}
+
+.avatar {
+    max-width: 100px;
+    max-height: 100px;
+    border-radius:50%;
+    margin-top: 80px;
 }
