--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,7 +30,7 @@
 
     <!-- add highlight -->
     <link rel="stylesheet" href="{{ site.url }}/css/androidstudio.css">
-    <script type="text/javascript" src="{{ site.url }}/js/highlight.pack.js"></script>
+    <!--<script type="text/javascript" src="{{ site.url }}/js/highlight.pack.js"></script>-->
     <script>hljs.initHighlightingOnLoad();</script>
 
 </head>
