--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,7 +26,7 @@
 
     <!-- Custom Fonts -->
     <!-- change font-awesome CDN to qiniu -->
-    <link href="http://cdn.staticfile.org/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://cdn.staticfile.org/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <!-- add highlight -->
     <link rel="stylesheet" href="{{ site.url }}/css/androidstudio.css">
