--- a/_includes/left-content.html
+++ b/_includes/left-content.html
@@ -1,4 +1,4 @@
-<div class="content">
+<div class="site-info">
     <img class="avatar" src="/images/avatar.png" width="100" height="100"/>
 
     <h3>{{ site.title }}</h3>
