--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -3,7 +3,9 @@ layout: default
 ---
 
 <div class="block-left">
-    {% include left-content.html %}
+    <div class="content">
+        {% include left-content.html %}
+    </div>
 </div>
 
 <div class="block-right">
