--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -1,13 +1,32 @@
 ---
-layout: default
+layout: base
 ---
 
 <div class="post-list-container">
-    <ul>
-        {% for post in site.posts %}
-            <li>
-                <a href="{{post.url}}">{{ post.title }}</a>
-            </li>
-        {% endfor %}
-    </ul>
+    {% for post in site.posts %}
+    <div class="post-list-item">
+        <a target="_blank" href="{{post.url}}">
+            <span class="post-list-item-title">{{ post.title }}</span>
+            <span class="post-list-item-desc">
+                {% if post.description %}
+                    {{ post.description }}
+                {% else %}
+                    {{ post.content | strip_html | truncate:200 }}
+                {% endif %}
+            </span>
+        </a>
+        <div class="list-item-tags-container">
+            {% if post.tags %}
+                {% for tag in post.tags%}
+                <a class="list-item-tags" href="#">{{ tag }}</a>
+                {% endfor %}
+            {% endif%}
+        </div>
+        <span class="post-list-item-meta">
+            Posted by {% if post.author %}{{ post.author }}{% else %}{{ site.title }}{% endif %} on {{ post.date |
+            date: "%B %-d, %Y" }}
+        </span>
+    </div>
+    <hr>
+    {% endfor %}
 </div>
