--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,6 +6,7 @@
     <meta name="author" content="haoxiaofei">
     <meta name="keyword"  content="{{ site.keyword }}">
     <meta name="description" content="{{ site.description }}">
+    <link rel="shortcut icon" href="/images/favicon.ico"/>
     <!--TODO: icon-->
     <!--<link rel="shortcut icon" href="/images/favicon.ico"/>-->
     <title>{{ page.title }}</title>
