--- a/css/hxf-custom.css
+++ b/css/hxf-custom.css
@@ -173,6 +173,11 @@
     text-decoration: none;
 }
 
+.post-list-item-desc:hover,
+.post-list-item-title:hover {
+    color: #337ab7;
+}
+
 .post-list-item-title {
     display: block;
     font-size: 25px;
@@ -259,4 +264,53 @@
 
 .post-tags-container {
     margin-top: 20px;
+}
+
+.vertical-base-container {
+    padding-top: 100px;
+    height: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.top-block {
+    border-radius: 15px;
+    width: 100%;
+    height: 270px;
+    text-align: center;
+    padding-top: 50px;
+    background-image: url("/images/head.png");
+    background-size:cover;
+}
+
+.bottom-block {
+    padding-top: 50px;
+    overflow: auto;
+}
+
+.about-logo {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+@media (min-width: 768px) {
+    .vertical-base-container {
+        width: 550px;
+    }
+}
+@media (min-width: 992px) {
+    .vertical-base-container {
+        width: 800px;
+    }
+}
+@media (min-width: 1200px) {
+    .vertical-base-container {
+        width: 900px;
+    }
 }
