文章增加分类

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
     <meta name="keyword"  content="{{ site.keyword }}">
     <meta name="description" content="{{ site.description }}">
     <link rel="shortcut icon" href="/images/favicon.ico"/>
-    <title>{{ page.title }}</title>
+    <title>{{site.title}} - {{ page.title }}</title>
 
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
