--- a/css/hxf-custom.css
+++ b/css/hxf-custom.css
@@ -347,3 +347,11 @@
         width: 900px;
     }
 }
+
+/* 控制博文内的图片大小 */
+.post-container img{
+    display: block;
+    max-width: 100%;
+    height: auto;
+    margin: 1.5em auto 1.6em auto;
+}
