--- a/_layouts/vertical-base.html
+++ b/_layouts/vertical-base.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="vertical-base-container">
     <div class="top-block">
-        <img class="about-logo" src="/images/logo.png">
+        <img class="about-logo" src="/images/logo200.png">
         <h2>{{ site.title }}</h2>
     </div>
 
