--- a/_includes/left-content.html
+++ b/_includes/left-content.html
@@ -1,5 +1,5 @@
 <div class="site-info">
-    <img class="avatar" src="/images/avatar.png" width="100" height="100"/>
+    <img class="avatar" src="/images/logo200.png" width="100" height="100"/>
 
     <h3>{{ site.title }}</h3>
 
