--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,5 @@
 <!-- Navigation -->
-<nav class="head-navigation">
+<nav id="nav" class="head-navigation">
     <div class="nav-container">
         <div class="nav-title">
             <a class="nav-brand" href="{{ site.baseurl }}/">
