--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -2,14 +2,16 @@
 layout: default
 ---
 
-<div class="block-left">
-    <div class="content">
-        {% include left-content.html %}
+<div class="body-container">
+    <div class="block-left">
+        <div class="content">
+            {% include left-content.html %}
+        </div>
     </div>
-</div>
 
-<div class="block-right">
-    <div class="content">
-        {{ content }}
+    <div class="block-right">
+        <div class="content">
+            {{ content }}
+        </div>
     </div>
 </div>
