--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
         <h1>{{ page.title }}</h1>
         <div class="post-tags-container">
             {% for tag in page.tags %}
-                <a class="list-item-tags" href="#">{{ tag }}</a>
+                <a class="list-item-tags" href="{{site.url}}/tags#{{ tag }}">{{ tag }}</a>
             {% endfor %}
         </div>
         <div class="post-info">
